# dirs

./: .env.example  .gitignore  INSTALLATION.md  LICENSE  LOCAL-SETUP.md  Launch.cmd  Launch.ps1  Launch.sh  Makefile  README.md  THIRD_PARTY_NOTICES.md  Untitled-1.ps1  deploy.md  docker-compose.yml  package-lock.json  project.md  pytest.md  simpleui.md  transcript.md
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/director_api/: __init__.py  __main__.py  cli.py  config.py  llm_prompt_catalog.py  logging_config.py  main.py  style_presets.py  timeline_mix_levels.py  tracing.py  voice_catalog.py
apps/api/scripts/: _a6_worker_cleanup.py  _audit_comfyui_workflows.py  _check_rough_cut_status.py  _extract_phase5_compile.py  _extract_phase5_compile_v2.py  _reapply_worker_patches.py  _recover_worker_tasks.py  _remove_legacy_agent.py  backfill_scene_precompile.py  backfill_usage_cost_estimate.py  migrate_phase_routers_tenant.py  run_final_cut.py  run_rough_cut.py  smoke_comfyui_text_to_video.py  smoke_fal_image_video.py  troubleshoot_compile.py
apps/api/tests/: test_active_text_llm_gate.py  test_admin_security.py  test_agent_resume_publish.py  test_agent_resume_scenes_skip.py  test_agent_run_control_schema.py  test_agent_run_failure_copy.py  test_agent_run_orphan_recovery.py  test_agent_run_pause_yield.py  test_api_base_url.py  test_assemble_scene_still_prompt.py  test_assemble_scene_video_prompt.py  test_auth_config.py  test_brief_clip_frame_fit.py  test_brief_publish_to_youtube.py  test_camera_perspective.py  test_character_bible_injection.py  test_character_bible_normalize.py  test_character_portrait_skip.py  test_chatterbox_voice_ref_paths.py  test_comfyui_test_runs.py  test_comfyui_workflow_path_resolve.py  test_comfyui_workflow_route_order.py  test_comfyui_workflow_storage.py  test_editor_project_export.py  test_ffmpeg_version_parse.py  test_flux_structured_prompt.py  test_image_prompt_assembly.py  test_impl_module_bindings.py  test_imports.py  test_integrations_telegram.py  test_job_enqueue.py  test_job_orphan_recovery.py  test_json_from_model.py  test_maintenance_tasks.py  test_manual_chapter_import.py  test_media_comfyui.py  test_media_fal.py  test_narration_bracket_visual.py  test_optional_tts_pip.py  test_parse_pipeline_options.py  (+46 more)
apps/mcp-director/: README.md  pyproject.toml
apps/mcp-director/director_mcp/: __init__.py  __main__.py  api_client.py  server.py
(+456 files in other folders)
