[project]
name = "director-api"
version = "0.1.0"
description = "Directely studio orchestration API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.0",
    "email-validator>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "fal-client>=0.13.0",
    "openai>=1.57.0",
    "openai-agents>=0.13.0",
    "jsonschema>=4.23.0",
    "python-multipart>=0.0.17",
    "stripe>=11.0.0",
    "firebase-admin>=6.5.0",
    "beautifulsoup4",
    "tavily-python",
    "ffmpeg-pipelines @ file:../../packages/ffmpeg-pipelines",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

# Local TTS (CPU/GPU). Install only on workers that need it.
kokoro = [
    "kokoro>=0.9.4",
    "soundfile>=0.12.1",
]
# Voice clone (heavy: torch 2.6, GPU recommended). Vendored: packages/chatterbox-tts.
chatterbox = [
    "chatterbox-tts @ file:../../packages/chatterbox-tts",
]

[project.scripts]
director-api = "director_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.force-include]
"director_api/schemas/documentary_brief.schema.json" = "director_api/schemas/documentary_brief.schema.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "stress: load or resilience checks (some require STRESS_INTEGRATION=1)",
    "stress_destructive: may restart containers or fill disk — run manually",
]
