[project]
name = "director-mcp"
version = "0.1.0"
description = "MCP server for OpenClaw / Claude — Directely documentary Chat Studio + agent runs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12",
    "httpx>=0.27",
]

[project.scripts]
director-mcp = "director_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["director_mcp"]
